# tasks

.github/workflows/: api.yml
services/tasks_api/: pyproject.toml  serverless.yml
services/tasks_api/models/: task.py
services/tasks_api/tests/integration/: test_main.py
services/tasks_api/tests/unit/test_models/: test_task.py
